Fix ClearConfessWarningsCommand showing up in dms